--- a/pages/legaladvice/legaladvice.wxss
+++ b/pages/legaladvice/legaladvice.wxss
@@ -4,28 +4,29 @@
   
   
 }
+page{
+background: #F8F6F9;
+}
 .install-list{
 width:100%;
 border-radius: 22.5px;
 background: white;
 padding: 50rpx 30rpx 50rpx 60rpx ;
 box-sizing: border-box;
+position: relative;
 margin-bottom: 30rpx;
 }
 .install-h1{
 color: #333333;
 font-size: 30rpx;
 margin-top: 20rpx;
+align-items: flex-start;
 }
 
 .install-image{
   width: 24rpx;
   height: 40rpx;
   position: absolute;
-  right: 60rpx;
-  margin-top: -100rpx;
-}
-
-page{
-  background:#f5f5f5 ;
+  right: 15rpx;
+  top: calc(50% - 20rpx);
 }
