--- a/pages/swiper/tabbar.wxml
+++ b/pages/swiper/tabbar.wxml
@@ -1,7 +1,7 @@
 	<swiper class="swiper" autoplay="true" interval="5000">
 			<block wx:for="{{swiperData.list}}" wx:key="*this" bind>
 				<swiper-item>
-					<image class="swiper-image" mode="scaleToFill"  bindtap="jumpSwiper" src="{{item.src}}"></image>
+					<image class="swiper-image" mode="scaleToFill"  bindtap="jumpSwiper" src="{{item.coverUrl}}"></image>
 				</swiper-item>
 			</block>
 		</swiper>
