--- a/pages/logisticsservice/logisticsservice.wxml
+++ b/pages/logisticsservice/logisticsservice.wxml
@@ -3,10 +3,13 @@
 		<swipers swiperData="{{swiperData}}"></swipers>
 		<view class=" install">
 			<view class="install-list"  wx:for="{{list}}" wx:key="*this"  bindtap="jump" data-index="{{index}}">
-				<view class="install-h1">物流公司:{{item.name}} </view>
-				<view class="install-h1">
-				<view style="width:200px;">文字介绍：</view>
-				<view>{{item.description}}</view>
+				<view class="install-h1 index-flex ">
+					<view style="width:80px;">物流公司:</view>
+					<view>{{item.name}}</view>
+				</view>
+				<view class="install-h1 index-flex ">
+					<view style="width:80px;">文字介绍：</view>
+					<view class="install-h1-s">{{item.description}}</view>
 				</view>
 				<view class="install-h1">工作时间：{{item.workTime}}</view>
 					<view class="install-h1">联系电话：{{item.servicePhone}}</view>
