--- a/pages/tendering/tendering.wxml
+++ b/pages/tendering/tendering.wxml
@@ -5,10 +5,10 @@
 
 	<view class="index-search">
 		<image class="index-search-left" src="./../../image/searchs.png"></image>
-		<input placeholder="搜索">
+		<input bindinput="inname" placeholder="搜索" value="{{name}}">
 
 		</input>
-		<image class="index-search-right" src="./../../image/search.png"></image>
+		<image bindtap="getNeedLists" class="index-search-right" src="./../../image/search.png"></image>
 	</view>
 	<view class="index-bk"></view>
 	<!-- 标题 -->
@@ -25,10 +25,10 @@
 	<!-- 列表 -->
 	<view bindtap="jump" data-index="{{index}}" class="index-flex index-center index-margin index-flex-between tendering-title"  wx:for="{{list}}" wx:key="*this">
 		<view class="tendering-title-view">
-			<view>{{item.name}}</view>
-			<view> （{{item.tips}}）</view>
+			<view>{{item.content}}</view>
+			<view> （{{item.title}}）</view>
 		</view>
-		<view class="tendering-title-h1">{{item.date}}</view>
+		<view class="tendering-title-h1">{{item.createTime}}</view>
 	</view>
 	<floatingwindow winData="{{winData}}"></floatingwindow>
 </view>
