--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -4,7 +4,7 @@
 		<image class="user_mine_head_img" mode="scaleToFill" src="./../../image/user_mine.png"></image>
 		<view class="user_mine_nav">
 			<view class="user_mine_avac">
-				<image src="{{userInfo.avatarUrl?userInfo.avatarUrl:'https://pic1.zhimg.com/50/v2-fe28c2ec4751fc25627642c845c2b48e_hd.jpg'}}"></image>
+				<image src="{{userInfo.avatarUrl?userInfo.avatarUrl:'../../image/user_icon.png'}}"></image>
 			</view>
 			<view class="user_mine_name">
 				<view class="user_mine_username">{{userInfo.nickName?userInfo.nickName:'用户昵称'}}</view>
