--- a/pages/tabr/floatingwindow.wxml
+++ b/pages/tabr/floatingwindow.wxml
@@ -1,6 +1,8 @@
 <view class="float-view">
-	<button class="float-view-icons" open-type="contact" session-from="weapp">
-		<image class="float-view-icon" wx-if="{{winData.list.booleam==true}}"  src="../../image/zixun.png"></image>
-		<image class="float-view-icon" wx:else src="../../image/kf.png"></image>
+		<image bindtap="jumpSwiper" class="float-view-icon" wx-if="{{winData.list.booleam==true}}"  src="../../image/zixun.png"></image>
+
+	<button class="float-view-icons" wx:else  open-type="contact" session-from="weapp">
+		<image class="float-view-icon"  src="../../image/kf.png"></image>
 	</button>
+	
 </view>
