--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,7 +9,7 @@
 		<input placeholder="搜索" bindinput="inname">
 
 		</input>
-		<image bindtap="getNeedLists" class="index-search-right" src="./../../image/search.png"></image>
+		<image bindtap="getNewNoteLists" class="index-search-right" src="./../../image/search.png"></image>
 	</view>
 
 	<!-- 列表 -->
@@ -50,26 +50,24 @@
 				<view class="index-flex"  bindtap="jumpDetails">
 					<image class="index-news-icon" src="{{item.userProfile.avatar.url}}"></image>
 					<view style="width:calc(100% - 100rpx);">
-						<view class="index-news-h1">{{item.serviceName}}</view>
+						<view class="index-news-h1">{{item.userProfile.name}}</view>
 						<view class="index-news-h2">{{item.createTime}}</view>
 					</view>
 				</view>
-				<image bindtap="jumpPhone" data-index="{{index}}" mode="scaleToFill" class="index-news-image" src="./../../image/dial.png"></image>
+				<image bindtap="jumpPhone" data-index="{{item}}" mode="scaleToFill" class="index-news-image" src="./../../image/dial.png"></image>
 			</view>
 			<view class="index-news-h3"  bindtap="jumpDetails">
 				{{item.content}}
 			</view>
 			<view class="index-news-content index-center index-flex">
-				<image bindtap="previewImage" data-index="./../../image/caigou-bk.png" mode="scaleToFill"  src="./../../image/caigou-bk.png"></image>
-				<image mode="scaleToFill" bindtap="previewImage" data-index="./../../image/caigou-bk.png" class="index-news-left" src="./../../image/caigou-bk.png"></image>
-				<image mode="scaleToFill" bindtap="previewImage" data-index="./../../image/caigou-bk.png" class="index-news-left" src="./../../image/caigou-bk.png"></image>
+				<image wx:for="{{item.resourceList}}" class="{{idx>0?'index-news-left':''}}" wx:for-index="idx" wx:for-item="itemName" bindtap="previewImage" data-index="{{itemName.storage.url}}" mode="scaleToFill"  src="{{itemName.storage.url}}"></image>
 			</view>
 			<view class="index-news-footer  index-flex">
 				<view class="index-news-h4">浏览次数{{item.viewLogCount}}次</view>
 				<view class="index-flex index-center">
 					<view class="index-flex index-center" bindtap="jumpFabulous" data-index="{{index}}">
 						<image mode="scaleToFill" src="./../../image/Fabulous.png"></image>
-						<view class="index-news-h4">21</view>
+						<view class="index-news-h4">{{item.dianzanCount}}</view>
 					</view>
 					<view class="index-flex index-center"  bindtap="jumpForwarde" data-index="{{index}}">
 						<image mode="scaleToFill" src="./../../image/Forward.png"></image>
