--- a/pages/install/details.wxml
+++ b/pages/install/details.wxml
@@ -3,21 +3,21 @@
 		<swipers swiperData="{{swiperData}}"></swipers>
 		<view class=" install">
 			<view class="install-list">
-				<view class="install-h1">联系电话：13811110000 </view>
-				<view class="install-h1">工作时间：8:00 - 17:00 </view>
+				<view class="install-h1">联系电话：{{itemData.servicePhone}} </view>
+				<view class="install-h1">工作时间：{{itemData.workTime}} </view>
 			</view>
 			<view class="install-list">
-				<view class="install-h1">文字介绍：文字介绍文字介绍文字介绍文字介 绍文字介绍文字介绍文字介绍文字介绍文字介 绍文字介绍文字介绍文字介绍</view>
+				<view class="install-h1">{{itemData.description}}</view>
 			</view>
 		</view>
 
 		<view class="index-margin index-flex details">
-			<view class="details-list {{index%2==0?'':'details-left'}}" bindtap="jump" wx:for="{{[1,2,3,4,5,6]}}" wx:key="*this">
-				<image class=""></image>
+			<view class="details-list {{index%2==0?'':'details-left'}}" bindtap="jump" wx:for="{{lists}}" wx:key="*this">
+				<image src="{{item.cover.url}}"></image>
 				<view class="index-flex index-center index-flex-between" style="margin: 0 14rpx;">
 					<view>
-						<view class="details-list-h2">大件搬运</view>
-						<view class="details-list-h3">￥669</view>
+						<view class="details-list-h3">{{item.name}}</view>
+						<view class="details-list-h2">￥{{item.price.current}}</view>
 					</view>
 					<view class="details-list-h1">购买
 					</view>
