--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -69,10 +69,10 @@
 						<image mode="scaleToFill" src="./../../image/Fabulous.png"></image>
 						<view class="index-news-h4">{{item.dianzanCount}}</view>
 					</view>
-					<view class="index-flex index-center"  bindtap="jumpForwarde" data-index="{{index}}">
+					<button class="index-flex index-center bottom-share" open-type="share"  bindtap="jumpForwarde" data-index="{{index}}">
 						<image mode="scaleToFill" src="./../../image/Forward.png"></image>
 						<view class="index-news-h4">{{item.shareCount}}</view>
-					</view>
+					</button>
 				</view>
 			</view>
 			<view class="index-bk"></view>
