--- a/pages/legaladvice/legaladvice.wxml
+++ b/pages/legaladvice/legaladvice.wxml
@@ -2,10 +2,10 @@
 	<view style="background: #F8F6F9;height:100%;">
 		<swipers swiperData="{{swiperData}}"></swipers>
 		<view class=" install">
-			<view class="install-list"  wx:for="{{list}}" wx:key="*this"  bindtap="jump" data-index="{{index}}">
+			<view class="install-list"  wx:for="{{list}}" wx:key="*this"  bindtap="jump" data-index="{{item}}">
 				<view class="install-h1 index-flex ">
 					<view style="width:80px;">法律顾问:</view>
-					<view>{{item.name}}</view>
+					<view>{{item.serviceName}}</view>
 				</view>
 				<view class="install-h1 index-flex ">
 					<view style="width:80px;">文字介绍：</view>
