--- a/pages/productLine/details.wxml
+++ b/pages/productLine/details.wxml
@@ -1,76 +1,5 @@
 <view class="text">
-<text wx:if="{{list.i==0}}">
-低温空气源热泵
-适用场所:会所、办公、别墅、多层家庭公寓等同时需要制冷、采暖场所。
-产品特性:规格齐全、产品多样; -25°C低温技术，可在零下25C下高效、稳定安全运行;采用谷轮热泵热水专用压缩机，提供高达60°C的热水，并将制热能力提高40%，能效提高20%;可直接取代传统锅炉、天然气等供热设备，特别适用于北方寒冷地区任何形式的采暖要求(地暖、风盘、暖气片)，适合新农村改造。
-</text>
-<text wx:elif="{{list.i==1}}">
-风冷螺杆机组
-适用场所: 宾馆、商场、办公楼、展览馆、机场、体育馆、电子、生物、轻纺、化工、冶金、制药、电力、机械等
-产品特性:产品齐全、机组有单冷型和冷暖型;节省空间、选用高效换热器、先进的外形结构设计及系统匹配、体积小、重量轻、占地少;模块化设计、外观精巧美观;超低噪音、运转宁静;控制先进、质量稳定、性能可靠。
-</text>
-<text wx:elif="{{list.i==2}}">
-风冷模块机组
-适用面积: 300m2以 上。
-适用场所:宾馆、商场、办公楼、展览馆、机场、体育馆等公共设施。
-产品特性:高效节能、低噪音、结构合理、操作简便、运行安全、安装维护方便;独特的系统设计，在宽广的温度和压力范围内均可高效运行;普通机组可实现最高制冷环境温度48℃，低温机组可实现最低制热使用环境温度为-20℃，高温热水型机组可实现最高热水出水温60℃。
-</text>
-<text wx:elif="{{list.i==3}}">
-降膜式水冷冷水机组
-适用面积: 2000m2以上。
-适用场所: 广泛应用于宾馆、商场、办公楼、展览馆、机场、体育馆等公共设施。
-产品特性:优化设计,高效节能;产品设计完全遵照国际标准，结合中国实际国情设计;采用降膜式蒸发器换热效率高，COP高达5.5，选件精良，采用优质品牌压缩机，保证机组高效可靠运行;采用电子膨胀阀、自适应调节、精确控制供液量;自主研发的降膜蒸发器、换热效率高，冷媒充注量少，回油稳定;绿色环保R134a环保工质可供选择，充注量减少40%，高能效比，低耗电，减少碳排放。
-</text>
-<text wx:elif="{{list.i==4}}">
-降膜式水源热泵机组
-适用面积: 2000m2以上。
-适用场所:广 泛应用于宾馆、商场、办公楼、展览馆、机场、体育馆等公共设施。
-产品特性:优化设计，高效节能;产品设计完全遵照国际标准，结合中国实际国情设计;采用降膜式蒸发器换热效率高，“大温差、 小流量”设计理念，减少投资，降低运行费用。选件精良、稳定可靠;采用优质品牌压缩机，保证机组高效可靠运行，采用电子膨胀阀，自适应调节，精确控制供液量，高效的降膜蒸发器，换热效率高，冷媒充注量少，回油稳定;机组出厂前进行100%的性能测试，以保障机组可靠性;绿色环保，R134a环保工质，充注量减少40%。高能效比，低耗电，减少碳排放;适用范围广，机组运行热源进水温度范围8℃-25℃可以提供79C/45℃空调冷水，还可以提供60℃的热水。
-</text>
-<text wx:elif="{{list.i==5}}">
-满液式水冷冷水机组
-适用面积: 2000m2以 上。
-适用场所:广泛应用于宾馆、商场、办公楼、展览馆、机场、体育馆等公共设施。
-产品特性:采用高效的满液式蒸发器、使COP值较传统的干式蒸发器大大提高，运行费用节省15-25%左右;高效的二次油分，可靠地引射泵回油系统，完美的解决了满液式机组的回油问题，确保了压缩机长时间运行不失油，使机组运行稳定可靠;电子膨胀阀对冷媒的供液量控制及时准确,大大提高了机组的效率。
-</text>
-<text wx:elif="{{list.i==6}}">
-满液式水源热泵机组
-适用面积: 2000m2以上
-适用场所:广 泛应用于宾馆、商场、办公楼、展览馆、机场、体育馆等公共设施。
-产品特性:采用高效满液式蒸发器、使COP值较传统的干式蒸发器大大提高。运行费用节省15-25%左右。高效的二次油分，可靠的引射泵回油系统，完美的解决了满液式机组组的回油问题，确保了压缩机长时间运行不失油，使机组运行稳定可靠;电子膨胀阀对冷媒的供液量控制及时准确，大大提高了机组的效率;机组可适用于地下水系统或地埋管系统，机组正常工作的范围广;对于地埋管系统可工作在0℃以下。
-</text>
-<text wx:elif="{{list.i==7}}">
-模块化水（地）源热泵机组
-适用面积: 800m2以上
-适用场所: 宾馆、酒店、别墅、写字楼、车站和工厂、大型超市、医院、银行、养殖场等大中型场所。
-产品特性:高效、节能、环保、热源的可再生性、运输安装便捷、运行安静, 可随意扩充机组容量，可根据容量实现机组自由组合、环境和经济效益显著，应用范围广。
-</text>
-<text wx:elif="{{list.i==8}}">
-风冷螺杆机组
-适用场所: 宾馆、商场、办公楼、展览馆、机场、体育馆、电子、生物、轻纺、化工、冶金、制药、电力、机械等
-产品特性:产品齐全、机组有单冷型和冷暖型;节省空间、选用高效换热器、先进的外形结构设计及系统匹配、体积小、重量轻、占地少;模块化设计、外观精巧美观;超低噪音、运转宁静;控制先进、质量稳定、性能可靠。
-</text>
-<text wx:elif="{{list.i==9}}">
-食用菌空调一体机
-适用面积: 100-600m2
-适用场所:金针菇、真姬菇、杏鲍菇、白灵菇、双孢菇、香菇、平菇、黑木耳、猴头菇、鸡腿菇、灵芝、秀珍菇、蛹虫草、茶树菇、金福菇、银耳等。
-产品特性:机组采用一体机结构，机组可安装在工作间或者室外均可，安装简便;冷暖型设计，可根据用户所在地水源状况合理设计地下水或者风冷、冷却塔附带锅炉为冷热源来满足菌菇房菌类的生长温度要求，减少用户初期投入和运行成本;机组压缩机采用世界知名压缩机品牌，高能效，应用范围广，可根据冷热量负荷自行进行能量调节，最大节约电力资源20%以上减少用户初期投资和生产成本;新风入口采用初效+中效袋式过滤器-体式设计，有效避免外界空气对菇房的感染和大温差波动，较少不必要损失;电动比例风阀和风机变频器更好的控制菇房内温度稳定和微风循环，冬季外界环境温度气温低于菇房温度需求时可按比例调节新风阀给菇房降温，不启动压缩机而达到节省电费。
-</text>
-<text wx:elif="{{list.i==10}}">
-水冷冷水机组
-适用面积: 1000m2以上
-适用场所:宾馆、商场、办公楼、工厂等
-产品特性:采用先进的结构设计及合理的系统匹配，机组能效比高，体积小;
-变容量调节，柔性启停，舒适节能;
-采用大型接触屏，控制功能强大，具备故障自诊断等多项功能;
-多重安全保护措施，机组运行安全可靠。
-</text>
-<text wx:elif="{{list.i==11}}">
-小型水（地）源热泵机组
-适用面积: 50ml以上
-适用场所:家庭、 超市、学校、商场、酒店、医院、办公楼、娱乐场所等各种空间。
-产 品特性:环保、节能;热源侧采用大温差系小流量，节约用水;不同房间可同时供冷供热，大大提高了居住舒适性;微电脑控制，保护装置齐全，运行平稳可靠，操作简便，同时机组可采用集中监控和远程控制。
-</text>
+<rich-text nodes="{{list.description}}" ></rich-text>
 </view>
 <image src="../../image/{{list.i+1}}.jpg" mode="widthFix" style="width:100%"></image>
 
@@ -80,10 +9,10 @@
 			<image src="../../image/home-index.png"></image>
 			<view class="tar-h1">首页</view>
 		</view>
-		<view class="tar-list"  >
+		<button class="tar-list"  open-type="share" >
 			<image src="../../image/zhuanfa.png"></image>
 			<view class="tar-h1">分享</view>
-		</view>
+		</button>
 		<view class="tar-list"  bindtap="start">
 			<image src="../../image/start.png"></image>
 			<view class="tar-h1">收藏</view>
