--- a/pages/productLine/details.wxss
+++ b/pages/productLine/details.wxss
@@ -19,6 +19,9 @@
   width: 70rpx;
   margin-left: 30rpx;
   text-align: center;
+  background: white;
+  padding: 0!important;
+  line-height: 1!important;
 }
 .tar-bottom{
   width: 200rpx;
