--- a/pages/purchase/details.wxml
+++ b/pages/purchase/details.wxml
@@ -1,31 +1,30 @@
 <view class="index-bk"></view>
-<textarea></textarea>
 <view class="index-center index-flex index-margin" style="padding:30rpx 0 ;">
-	<view class="index-news-icon"></view>
-	<view style="">
-		<view class="legaladvice-h1">广胜机电13800001111</view>
-		<view class=" legaladvice-h2">一分钟前</view>
+	<image  src="{{list.userProfile.avatar.url}}" class="index-news-icon"></image>
+	<view>
+		<view class="legaladvice-h1">{{list.serviceName}}{{list.servicePhone}}</view>
+		<view class=" legaladvice-h2">{{list.createTime}}</view>
 	</view>
 </view>
 <view class="index-margin" style="font-size:30rpx;">
-机翼型叶轮，防爆风机，最大30号，最小2号，角度 可以调整，风量风压随时改变，手机微信同步：138 00001111</view>
-
+{{list.content}}
+</view>
 <view class="tabr index-flex index-flex-between index-center">
 		<view class="index-flex index-center">
 			<view class="tar-list" bindtap="jump">
 				<image src="../../image/home-index.png"></image>
 				<view class="tar-h1">首页</view>
 			</view>
-			<view class="tar-list" bindtap="zhuanfa">
+			<button class="tar-list" bindtap="zhuanfa" open-type="share">
 				<image src="../../image/zhuanfa.png"></image>
 				<view class="tar-h1">转发</view>
-			</view>
+			</button>
       <view class="tar-list" bindtap="start">
 				<image src="../../image/start.png"></image>
 				<view class="tar-h1">收藏</view>
 			</view>
 		</view>
-		<image class="tar-bottom-image" src="../../image/dial.png"></image>
+		<image class="tar-bottom-image" bindtap="jumpPhone" src="../../image/dial.png"></image>
 	</view>
 	<!-- <image style="width:100%;" mode="widthFix" src="../../image/sss.png"></image> -->
 	<view style="width:100%;height:700px;background:white"></view>
