--- a/pages/tabr/tabbar.wxss
+++ b/pages/tabr/tabbar.wxss
@@ -18,7 +18,18 @@
   width: 100rpx;
   margin-left: 30rpx;
   text-align: center;
+  background: white;
+  padding: 0!important;
+  line-height: 1!important;
+border:0px solid ;
 }
+
+button::after{
+  border:0px solid ;
+
+}
+
+
 .index-flex-between{
   justify-content: space-between;
 }
